--- a/Example_Analysis.qmd
+++ b/Example_Analysis.qmd
@@ -1,31 +1,68 @@
 ---
-title: "Example Analysis"
+title: "Data Analysis"
+bibliography: reference.bib
 ---
 
-3.  A data analysis page called 'Example analysis'. You can pick any dataset you wish you analyze. In this webpage, you will analyze a dataset and summarize the results. The requirements for this webpage are the following:
+![](trashwheel.jpeg){fig-align="center" width="800"}
 
-4.  Question: You must describe what is the question you aim to answer with the data and data analysis.
+### Introduction
 
-3.  Audience: You must describe who is the intended audience for the data analysis.
+::: callout-note
+### Audience
 
-The intended audience is residents of Baltimore or anyone who is interested in the environmental trends.
+The intended audience is residents of Baltimore or anyone who is interested in the environmental impact of Mr. Trash Wheel.
+:::
 
-3.  Data Source: You must describe and link to where the original data come from that you chose.
-    -   <https://p8105.com/data/202409%20Trash%20Wheel%20Collection%20Data.xlsx>
-4.  Data Dictionary: You must include a link to a data dictionary for the data or create one inside the webpage.
-5.  Data Wrangling: Your analysis must include some minimal form of data wrangling with you using at least five different functions from `dplyr` or `tidyr`.
-6.  Methods:
+### Dataset
+
+The public dataset on Mr. Trash Wheel is provided by the Waterfront Partnership of Baltimore in the form of a Google spreadsheet.
+
+The Mr. Trash Wheel spreadsheet is largely self-explanatory, and includes information on the dumpter number, date of collection, amount of total litter and litter type. Additional spreadsheets for Professor Trash wheel and for precipitation amounts are also included in the document.
+
+[@dataset] [@source]
+
+Data Dictionary: You must include a link to a data dictionary for the data or create one inside the webpage.
+
+```{r, eval = TRUE}
+# Data Dictionary for Dumpster Data
+dumpster_data_dict = data.frame(
+  Variable = c("Dumpster", "Month", "Year", "Date", "Weight (tons)", "Volume (cubic yards)", 
+               "Plastic Bottles", "Polystyrene", "Cigarette Butts", "Plastic Bags", "Wrappers", "Homes Powered*"),
+  Description = c("Identifier for the dumpster", "Month of data collection", "Year of data collection", 
+                  "Date of data collection", "Weight of waste in tons", "Volume of waste in cubic yards", 
+                  "Count of plastic bottles", "Count of polystyrene items", "Count of cigarette butts", 
+                  "Count of plastic bags", "Count of wrappers", "Estimated number of homes powered by the waste")
+)
+dumpster_data_dict
+```
+
+### Question
+
+### Data Processing
+
+3.  Your analysis must include some minimal form of data wrangling with you using at least five different functions from `dplyr` or `tidyr`.
+
+### Methods
+
+3.  Methods:
     -   Your analysis must include one image or table (not one you created yourself, but one you have saved locally or one from the web).
 
     -   Your analysis must include at least two different [callout blocks](https://quarto.org/docs/authoring/callouts.html).
 
     -   Your analysis must include the use of at least 1 [margin content](https://quarto.org/docs/authoring/article-layout.html#margin-content).
-7.  Data Visualization:
+
+### Exploratory Data Analysis
+
+3.  
+
     -   Your analysis should include at least three plots with you using at least three different `geom_*()` functions from `ggplot2` (or another package with `geom_*()` functions).
 
     -   Plots should have titles, subtitles, captions, and human-understandable axis labels.
 
     -   At least one plot should using a type of faceting (`facet_grid()` or `facet_wrap()`).
-8.  List of functions: At the end of the data analysis, list out each of the functions you used from each of the packages (`dplyr`, `tidyr`, and `ggplot2`) to help the TA with respect to making sure you met all the requirements described above.
-9.  Discussion: You must summarize your analysis and/or results with a paragraph (4-6 sentences).
-10. Bibliography: Your analysis must include a `.bib` file, which you use to reference at least three unique citations. For example, it could be to a website or paper from where the original data came from or it could be to a paper describing a method you are using to analyze the data.
+
+4.  List of functions: At the end of the data analysis, list out each of the functions you used from each of the packages (`dplyr`, `tidyr`, and `ggplot2`) to help the TA with respect to making sure you met all the requirements described above.
+
+### Discussion
+
+3.  You must summarize your analysis and/or results with a paragraph (4-6 sentences).
