done data analysis

--- a/reference.bib
+++ b/reference.bib
@@ -16,17 +16,18 @@
   note = {Accessed: 2024-11-07}
 }
 
-
-@misc{palmerstation,
-  title = {Palmer Station Long Term Ecological Research},
-  url = {https://pallter.marine.rutgers.edu/},
-  note = {Accessed: 2024-11-01}
+@misc{gavin2014gam,
+  author = {Simpson, Gavin},
+  title = {Modelling Seasonal Data with {GAM}},
+  year = {2014},
+  url = {https://fromthebottomoftheheap.net/2014/05/09/modelling-seasonal-data-with-gam/},
+  note = {Accessed: 2024-11-08}
 }
 
-@online{adeliepenguin,
-  title = {Adelie Penguin},
-  author = {Australian Museum},
-  year = {2023},
-  url = {https://australian.museum/learn/animals/birds/adelie-penguin/},
-  note = {Accessed: 2024-11-01}
+@misc{mrtrashwheel,
+  author = {{Mr. Trash Wheel}},
+  title = {Mr. Trash Wheel},
+  year = {2024},
+  url = {https://www.mrtrashwheel.com},
+  note = {Accessed: 2024-11-08}
 }
