--- a/Example_Analysis.qmd
+++ b/Example_Analysis.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Data Analysis"
+format:
+  html:
+    code-fold: true
 bibliography: reference.bib
 ---
 
@@ -7,62 +10,181 @@ bibliography: reference.bib
 
 ### Introduction
 
-::: callout-note
-### Audience
+In 2014, the city of Baltimore created the first trash interceptor, named Mr. Trash Wheel, to clean up pollution in its waterways [@mrtrashwheel]. The key idea is that the semi-automatic interceptor collects pollutants and prevents them from migrating into the Chesapeake Bay. The trash are incinerated and then converted into electricity, which are used to power homes in Maryland. In the last decade, over a million pounds of debris have been collected.
 
-The intended audience is residents of Baltimore or anyone who is interested in the environmental impact of Mr. Trash Wheel.
+In its success, the Mr. Trash Wheel family has been expanding. The Inner Harbor currently hosts four trash wheels: Mr. Trash Wheel (2014), Professor Trash Wheel (2016), Captain Trash Wheel (2018), and Gwynnda the Good Wheel of the West (2021). This analysis will focus on Professor Trash Wheel. She is acclaimed as "the brainy and beautiful wheel residing in Harris Creek in the Canton neighborhood of Baltimore city". The intended audience is residents of Baltimore or anyone who is interested in the environmental impact of the Mr. Trash Wheel initiatives.
+
+::: {.callout-important title="Activity"}
+I took the [Trash Wheel personality test](https://waterfrontpartnership.typeform.com/trashwheel) and was found to relate most to Professor Trash Wheel, inspiring my choice for this analysis. I encourage you to take the test yourself!
+:::
+
+::: {.callout-tip title="Fun Fact!"}
+Professor Trash Wheel is a champion for women in STEM and likes Beyoncé, Eleanor Roosevelt, and sea otters. She dislikes low tides, strong winds, and the patriarchy. We also have the same birthday! You can also meet the other trash wheels [here](https://www.mrtrashwheel.com/trash-wheel-family).
 :::
 
 ### Dataset
 
-The public dataset on Mr. Trash Wheel is provided by the Waterfront Partnership of Baltimore in the form of a Google spreadsheet.
+The public datasets for the Mr. Trash Wheel family are provided by the Waterfront Partnership of Baltimore in the form of a Google spreadsheet [@source] [@dataset]. These are updated on at least a monthly basis and have almost no missing data. The variables are fairly self-explanatory, although a data dictionary provided here for completeness. It is worth noting that the Homes Powered variable is calculated under the assumption that an average household will use 30 kilowatts per day of electricity.
 
-The Mr. Trash Wheel spreadsheet is largely self-explanatory, and includes information on the dumpter number, date of collection, amount of total litter and litter type. Additional spreadsheets for Professor Trash wheel and for precipitation amounts are also included in the document.
-
-[@dataset] [@source]
-
-Data Dictionary: You must include a link to a data dictionary for the data or create one inside the webpage.
-
-```{r, eval = TRUE}
-# Data Dictionary for Dumpster Data
-dumpster_data_dict = data.frame(
-  Variable = c("Dumpster", "Month", "Year", "Date", "Weight (tons)", "Volume (cubic yards)", 
-               "Plastic Bottles", "Polystyrene", "Cigarette Butts", "Plastic Bags", "Wrappers", "Homes Powered*"),
-  Description = c("Identifier for the dumpster", "Month of data collection", "Year of data collection", 
-                  "Date of data collection", "Weight of waste in tons", "Volume of waste in cubic yards", 
-                  "Count of plastic bottles", "Count of polystyrene items", "Count of cigarette butts", 
-                  "Count of plastic bags", "Count of wrappers", "Estimated number of homes powered by the waste")
-)
-dumpster_data_dict
+```{r, echo = FALSE, message = FALSE}
+library(dplyr)
+library(tidyr)
+library(readxl)
+library(lubridate)
+library(ggplot2)
+library(mgcv)
+library(stringr)
+library(broom)
+library(kableExtra)
 ```
 
-### Question
+```{r, eval = TRUE, echo = FALSE}
+data.frame(
+  Variable = c("Dumpster", "Month", "Year", "Date", "Weight", "Volume", 
+               "Plastic Bottles", "Polystyrene", "Cigarettes", "Glass Bottles", "Plastic Bags", "Wrappers", "Homes Powered"),
+  Description = c("Identifier for the dumpster", "Month of data collection", "Year of data collection", 
+                  "Date of data collection", "Weight of waste in tons", "Volume of waste in cubic yards", 
+                  "Count of plastic bottles", "Count of polystyrene items", "Count of cigarette butts", "Count of glass bottles",
+                  "Count of plastic bags", "Count of wrappers", "Estimated number of homes powered")
+) %>%
+  kable("html", caption = "Data Dictionary") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover", "condensed"))
+```
 
 ### Data Processing
 
-3.  Your analysis must include some minimal form of data wrangling with you using at least five different functions from `dplyr` or `tidyr`.
+First, we removed the data for the current year of 2024, as they have missing values for the Homes Powered variable. We also removed the last row of the dataset, which had the calculated totals of relevant variables since the construction of Professor Trash Wheel. Notably, the data collection of Professor Trash Wheel usually occurs one to three times per month but does not appear to be conducted on a consistent timetable. Therefore, for this analysis, we use aggregated monthly data which combines all dumpsters collected for a given month and year.
+
+```{r, echo = FALSE}
+df_orig = read_excel('202409 Trash Wheel Collection Data.xlsx', sheet = 2)
+```
+
+```{r}
+df = df_orig %>% rename_with(~ c("dumpster", "month", "year", "date", "weight", 
+                                 "volume", "plastic_bottles", "polystyrene", "cigs",
+                                 "glass_bottles", "plastic_bags", "wrappers", 
+                                 "homes_powered"), everything()) %>% 
+  filter(!is.na(homes_powered)) %>% 
+  slice(-n()) %>% 
+  separate(date, sep="-", into = c("year", "month", "day"), remove = FALSE) %>% 
+  mutate_if(is.character, as.numeric) %>% 
+    group_by(year, month) %>% 
+  mutate(across(c(volume, plastic_bottles, polystyrene, cigs, 
+                  glass_bottles, plastic_bags, wrappers, homes_powered), ~ sum(.x, na.rm = TRUE), .names = "monthly_total_{col}")) %>%
+  filter(row_number() == 1) %>% 
+  select(-c(5:14)) %>% 
+  ungroup()  %>% mutate(time = as.numeric(as.Date(paste(year, month, "01", sep = "-"))) / 1000)
+```
+
+### Exploratory Analysis
+
+```{r, message = FALSE}
+#| label: fig-cap-margin
+#| fig-cap: "Homes powered by Professor Trash Wheel over time, showing a slight downward trend."
+#| cap-location: margin
+#
+    ggplot(df, aes(x = date, y = monthly_total_homes_powered)) +
+      geom_line() +
+      labs(title = "Homes Powered by Professor Trash Wheel Over Time", x = "Date", y = "Homes Powered Each Month", subtitle = "(2016-2023)") +
+  geom_smooth(method = "lm", se = FALSE, color = "Red") +
+      theme_minimal()
+```
+
+The time series plot of the number of homes powered by Professor Trash Wheel from 2016 to 2023 reveals significant variability over time, with an overall slight decline in the number of homes powered. The variability within each year indicates that seasonal trends may be present. 
+
+```{r}
+#| label: fig-cap-margin-2
+#| fig-cap: "Homes powered by month, grouped by season."
+#| cap-location: margin
+#| 
+df = df %>%
+  mutate(season = case_when(
+    month %in% c(12, 1, 2) ~ "Winter",
+    month %in% c(3, 4, 5) ~ "Spring",
+    month %in% c(6, 7, 8) ~ "Summer",
+    month %in% c(9, 10, 11) ~ "Fall"
+  ))
+
+season_colors = c("Winter" = "blue", "Spring" = "lightgreen", "Summer" = "pink", "Fall" = "orange")
+
+month_labels = c("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec")
+
+ggplot(df, aes(x = factor(month, levels = 1:12, labels = month_labels), y = monthly_total_homes_powered, fill = season)) +
+  geom_boxplot() +
+  scale_fill_manual(values = season_colors) +
+  labs(x = "Month", y = "Homes Powered Each Month", fill = "Season", title = "Seasonal Trends in Homes Powered by Professor Trash Wheel", subtitle = "(2016-2023)") +
+  theme_minimal()
+```
+
+This boxplot shows the distribution of homes powered each month by Professor Trash Wheel, with months categorized by season (Winter, Spring, Summer, and Fall). There is notable variability across seasons, with higher medians and greater variability in spring and summer months compared to fall and winter, where the number of homes powered tends to be lower and more consistent.
+
+```{r, message = FALSE}
+#| label: fig-cap-margin-3
+#| fig-cap: "Positive correlation between volume and homes powered."
+#| cap-location: margin
+#| 
+ggplot(df, aes(x = monthly_total_volume, y = monthly_total_homes_powered)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE, color = "blue") +
+  labs(title = "Scatterplot of Volume vs. Homes Powered by Professor Trash Wheel", subtitle = "(2016-2023)", x = "Volume", y = "Homes Powered Each Month") +
+  theme_minimal()
+```
+
+Since the electricity used to power the homes each month is the result of incinerating of the collected waste, we may hypothesize that the volume, weight, or the type of waste is influencial in electricity generation. In this analysis, I choose to investigate volume. The scatterplot of Volume vs. Homes Powered with a fitted linear regression line shows a positive relationship, suggesting that as volume increases, the number of homes powered also tends to increase. It is also worth noting that Professor Trash Wheel is often emptied when she reaches capacity, which is at 15 tons. However, this can occur multiple times each month, hence clustering of volume at 15, 30, and 45 tons.
+
+### Research Question
+
+Are there seasonal trends in the number of homes powered, after controlling for the volume?
 
 ### Methods
 
-3.  Methods:
-    -   Your analysis must include one image or table (not one you created yourself, but one you have saved locally or one from the web).
+First, we fit a linear regression model using time to model monthly homes powered, while controlling for the volume of the waste collected that month. We also fit a model using both time, month, and volume to model the homes powered each month.
 
-    -   Your analysis must include at least two different [callout blocks](https://quarto.org/docs/authoring/callouts.html).
+Since we identified that there may be a seasonal trend in the data, we also fit two generalized additive models (GAM) using the `mgcv` R package. The first assumes that there are uncorrelated errors and the second model assumes an AR1 correlation structure. We specify a spline to the month and time variables only. For both models, the dimensions of the basis used for the spline are specified to be 12 for month (as this is the number of unique values). We also specify the basis type to be a cyclic cubic spline, which means there is no discontinuity between January and December. For the model allowing correlated errors, we fit an autoregressive moving-average process to the residuals of order 1. A complete tutorial for GAM for seasonal data can be found [here](https://fromthebottomoftheheap.net/2014/05/09/modelling-seasonal-data-with-gam/). [@gavin2014gam] To compare these methods, we use Adjusted $R^2$ values.
 
-    -   Your analysis must include the use of at least 1 [margin content](https://quarto.org/docs/authoring/article-layout.html#margin-content).
+### Analysis
 
-### Exploratory Data Analysis
+Comparing the two linear models, we see that the more parsimonious model with time and monthly total volume seems to fit the data better than when controlling for month. This is shown by the adjusted $R^2$ values being nearly identical (~84%) and the month variable being not statistically significant with the other variables in the model. In the model with time and monthly total volume, both predictors are statistically significant with a positive relationship to homes powered. It is interesting to note that the slightly decreasing trend present in Figure 1 disappears when controlling for volume.
+```{r}
+lm_fit_1 = lm(monthly_total_homes_powered ~ monthly_total_volume + time, df)
 
-3.  
+lm_fit_2 = lm(monthly_total_homes_powered ~ monthly_total_volume + time + month, df)
 
-    -   Your analysis should include at least three plots with you using at least three different `geom_*()` functions from `ggplot2` (or another package with `geom_*()` functions).
+summary(lm_fit_1)
+summary(lm_fit_2)
+```
 
-    -   Plots should have titles, subtitles, captions, and human-understandable axis labels.
+Next, we fit the GAM with uncorrelated errors. This model yields a statistically significant parametric coefficient for volume and a smooth term for time. We can see the visual relationships between the original time and month variables with their spline variables. Notably, for month we see a smoothed curve for the relationship investigated in Figure 2. In the GAM model results, the smooth term for month is close to statistical significance but is not at a p-value of 0.063. The adjusted $R^2$ is 84.9% for this model. 
 
-    -   At least one plot should using a type of faceting (`facet_grid()` or `facet_wrap()`).
+```{r}
+m = gamm(monthly_total_homes_powered ~ s(month, bs = "cc", k = 12) + monthly_total_volume + s(time), data = df)
+summary(m$gam)
 
-4.  List of functions: At the end of the data analysis, list out each of the functions you used from each of the packages (`dplyr`, `tidyr`, and `ggplot2`) to help the TA with respect to making sure you met all the requirements described above.
+layout(matrix(1:2, ncol = 2))
+plot(m$gam, scale = 0)
+acf(resid(m$lme), lag.max = 36, main = "ACF")
+layout(1)
+```
 
-### Discussion
+We also generate an autocorrelation function (ACF) plot, which indicates that there may be a slight autocorrelation, but it doesn't seem to be evident. We fit another GAM with the AR1 specification. This yields extremely similar results for the coefficients and statistical significance, and adjusted $R^2$ compared to the uncorrelated version. The Likelihood Ratio Test result indicates that the simpler GAM model is better. Comparing to the linear regression models, we have that the GAM with uncorrelated errors explains the most variation in the homes powered each month, specifically 84.9%.
+```{r}
+ctrl = list(niterEM = 0, msVerbose = FALSE, optimMethod="L-BFGS-B")
 
-3.  You must summarize your analysis and/or results with a paragraph (4-6 sentences).
+## AR(1)
+m1 = gamm(monthly_total_homes_powered ~ s(month, bs = "cc", k = 12) + monthly_total_volume + s(time), data = df, correlation = corARMA(form = ~ 1| year, p = 1), control = ctrl)
+
+summary(m1$gam)
+
+anova(m$lme, m1$lme)
+```
+
+
+::: {.callout-note}
+`dplyr  `: rename_with(), filter(), slice(), separate(), mutate_if), group_by(), mutate(), across(), select(), ungroup()
+
+`ggplot2`: geom_line(), geom_boxplot(), geom_point(), geom_smooth()
+:::
+
+
+
+
